added search funtionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="no_books_found">No Books Found</string>
     <string name="device_offline">Could not connect to network</string>
     <string name="google_books_api_key">AIzaSyAitQMoAu2Sxt7DjZVeozK3tqMuCb6GoHo</string>
+    <string name="menu_title">Book List</string>
+    <string name="search_hint">Search a book...</string>
+
+    <string name="label_search_activity_main">LabelSearchMainActivity</string>
 </resources>
